<resources>
    <string name="app_name">SmartCalc</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back_to_calc">Back To Calc</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="savepassword">Save Password</string>
    <string name="keepmeloggedin">Keep me logged in</string>
    <string name="backtocalc">Back to Calc</string>
    <string name="signup">No account? Sign Up!</string>
    <string name="signin">Log In</string>
    <string name="google">Google</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
