<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.student.smartcalcapp.LoginActivity">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStylePrimary.AppName"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b_teacher"
        android:text="@string/teacher"
        style="@style/CustomButtonStyle"
        app:layout_constraintRight_toLeftOf="@+id/b_student"
        android:layout_marginRight="7dp"
       android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:layout_constraintLeft_toLeftOf="@+id/et_email"
        app:layout_constraintHorizontal_bias="0.466" />

    <Button
        android:id="@+id/b_student"
        android:text="@string/student"
        style="@style/CustomButtonStyle"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/et_email"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <EditText
        android:id="@+id/et_email"
        android:hint="@string/email"
        style="@style/EditTextBox"
        android:background="@drawable/edit_textbox_style"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        android:layout_marginTop="100dp"
        />
    <EditText
        android:id="@+id/et_password"
        android:hint="@string/password"
        style="@style/EditTextBox"
        android:background="@drawable/edit_textbox_style"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginTop="30dp"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/tv_forgot_password"
        android:text="@string/forgotpassword"
        style="@style/TextStylePrimary.ForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        android:layout_marginTop="10dp"/>
    <CheckBox
        android:id="@+id/cb_save_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savepassword"
        style="@style/TextStylePrimary.SavePassword"
        android:buttonTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.3" />
    <CheckBox
        android:id="@+id/cd_keepme_logged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keepmeloggedin"
        style="@style/TextStylePrimary.SavePassword"
        android:buttonTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/cb_save_password"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.316" />

    <Button
        android:id="@+id/b_backto_calc"
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="@style/CustomButtonStyle"
        android:text="@string/back_to_calc"
        android:background="@drawable/button_style"
        app:layout_constraintTop_toBottomOf="@+id/cd_keepme_logged"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_sigup"
        android:text="@string/signup"
        style="@style/TextStylePrimary.ForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/b_backto_calc"
        android:layout_marginTop="10dp"/>
</android.support.constraint.ConstraintLayout>
